# ResearchForge

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README.zh.md  docker-compose.yml  pyproject.toml  requirements.txt
benchmarks/: benchmark_report.py  benchmark_runner.py
benchmarks/cases/: deep_research.json  multi_source.json  simple_research.json
benchmarks/tests/: test_benchmark.py
demo/: README.md  demo_cases.json  mock_provider.py
demo/expected_outputs/: fast_simple_summary.md
demo/scripts/: fault_injector.py  run_demo.py
demo/tests/: test_demo.py
evals/: README.md  metrics.py  runner.py
researchforge/: __init__.py  research_service.py
researchforge/core/: __init__.py  planner.py  react_engine.py
researchforge/evaluation/: evaluation_metrics.py  execution_metrics.py  quality_score.py
researchforge/nodes/: __init__.py  audit_node.py  claim_verification_node.py  coverage_node.py  deep_research.py  extract_node.py  fetch_node.py  gap_agent.py  plan_node.py  search_node.py  synthesis_node.py  write_node.py
researchforge/orchestration/: __init__.py  checkpoint_store.py  gap_replanner.py  mode_policy.py  research_graph.py  research_state.py  retry_policy.py
researchforge/rag/: __init__.py  evidence.py  retriever.py
researchforge/service/: app.py  config.py  limiter.py  models.py  persist.py  sse.py
researchforge/tests/: acceptance_resume.py  test_checkpoint_store.py  test_claim_verification.py  test_deep_checkpoint.py  test_evaluation_metrics.py  test_frontend_trace.py  test_react.py  test_research_graph.py  test_sse.py  (+8 more)
(+6 files in other folders)
